--- a/new1.html
+++ b/new1.html
@@ -8,9 +8,9 @@
 
 <body>
     <header>
-        <h1>Example site heading</h1>
+        <h1>Second example site heading</h1>
         <p>this is a paragraph in the example site after the heading</p>
-        <p>this is a paragraph in the example site after the heading</p>
+
         <nav>
             <ul>
                 <li><a href="#gaudi">Barcelona's Architect</a></li>
