Changed file 2nd version

--- a/new1.html
+++ b/new1.html
@@ -18,6 +18,7 @@
                 <li><a href="#park-guell">Park Guell</a></li>
             </ul>
         </nav>
+        <p>This is a paragraph added in a second time changed file</p>
     </header>
 </body>
 
